--- a/src/components/loginform.css
+++ b/src/components/loginform.css
@@ -51,28 +51,6 @@ input:focus {
     color: white;
 }
 
-.text {
-    position: relative;
-    bottom: -2em;
-}
-
-.hide {
-    position: absolute;
-    transform: scale(0);
-}
-
-.login-popup {
-    position: absolute;
-    height: 65px;
-    width: 15em;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0.25em;
-    background-color: black;
-    color: white;
-    bottom: 0;
-    transform: scale(1);
-    transition: 1.5s;
+.form-container {
+    padding-left: 80px;
 }
