--- a/src/components/userspages/admin.css
+++ b/src/components/userspages/admin.css
@@ -1,9 +1,10 @@
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-.page {
+.admin-page {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -11,10 +12,11 @@
     align-items: center;
 }
 
-.cover {
+.admin-cover {
     background-color: white;
-    width: 30em;
-    height: 20em;
+    width: 500px;
+    height: auto;
+    padding: 10px;
     position: relative;
     border-radius: 1em;
     box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
@@ -24,21 +26,29 @@
     justify-content: space-around;
 }
 
+.admin-cover h1 {
+    margin-bottom: 24px;
+    text-align: center;
+    align-items: center;
+}
+
 input {
+
     border: none;
     background-color: rgb(189, 189, 189);
     height: 2em;
-    width: 85%;
+    width: 450px;
     border-radius: 0.25em;
     text-align: center;
     padding: 2em;
+    margin-bottom: 24px;
 }
 
 input:focus {
     outline-color: rgb(43, 43, 43);
 }
 
-.login-btn {
+.admin-login-btn {
     width: 50%;
     height: 3rem;
     background-color: rgb(0, 0, 0);
@@ -51,7 +61,22 @@ input:focus {
     color: white;
 }
 
-.form-container {
-    align-items: center;
+.admin-login-btn:hover {
+    color: rgb(0, 0, 0);
+    background-color: rgb(234, 234, 234);
+}
+
+
+
+.todo-list {
+    list-style-type: none;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 24px;
     text-align: center;
+    align-items: center;
+}
+
+.todo-list li {
+    margin: 8px;
 }
